testsuite/tests/showIface/should_fail/THAddDocExternalA.hs
module THAddDocExternalA where

f :: Int
f = 42
